add travis.yml change gh-pages tool

--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,13 @@
                     <li><a href="#intro">Wissenswertes</a></li>
                     <li><a href="#work">Angebot</a></li>
                     <li><a href="#team">Lehrer</a></li>
-                    <li><a href="#team">Impressionen</a></li>
+                    <li><a href="#">Impressionen</a></li>
                 </ul>
                 <ul id="nav-mobile" class="side-nav">
                     <li><a href="#intro">Wissenswertes</a></li>
                     <li><a href="#work">Angebot</a></li>
                     <li><a href="#team">Lehrer</a></li>
-                    <li><a href="#team">Impressionen</a></li>
+                    <li><a href="#">Impressionen</a></li>
                 </ul>
             <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
             </div>
